--- a/experience.html
+++ b/experience.html
@@ -17,8 +17,10 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="volunterringExperience.html">Volunterring</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="games.html">Games</a></li>
+
             </ul>
         </nav>
         <div class="content">
@@ -39,13 +41,15 @@
                         <button type="button" onclick="closePopup('popup5')">Close</button>
                     </div>
                     <!-- button master data science -->
-                    <button type="button" class="btn" onclick="openPopup('popup6')">Master Data Science Intern</button>
+                    <button type="button" class="btn" onclick="openPopup('popup6')">Software Engineering and Master Data Science Intern</button>
                     <div class="popup" id="popup6">
                         <h3>Campari Group</h3>
                         <img src="campari-group-logo.png" class="logo">
-                        <p>Collaborating with data management to handle and optimise data using <b>SAP</b>, ensuring alignment of <b>data warehouses</b> and metrics across branches in the <b>US, Italy, Japan, China, and Singapore.</b> </p>
-                        <p>Developing solutions to enhance <b>data management processes in the SAP system</b> and streamline organisational workflows. </p>
-                        <p>Managing and maintaining high-quality data for efficient operations and <b>international consistency.</b></p>
+                        <p><b>Developed and automated a solution</b> for the APAC team to validate the accuracy of CAMPARI’s database, implementing periodic self-checks to ensure <b>data quality and integrity</b>.</p>
+                        <p><b>Engineered an automation workflow</b> that streamlined data flow between customers and third parties across the APAC region, enhancing <b>transparency</b> and ensuring <b>consistent data governance</b>.</p>
+                        <p><b>Utilised a diverse toolkit</b> including <b>Power Automate, SAP, Excel, Python, and TypeScript</b> to test, optimize, and implement automation processes, while designing a <b>user-friendly interface</b> for seamless access across the organisation.</p>
+                        <p><b>Collaborating with data management</b> to handle and optimise data using <b>SAP</b>, ensuring alignment of data warehouses and metrics across branches in the <b>US, Italy, Japan, China, and Singapore</b>.</p>
+                        <p><b>Managing data pipeline</b> and maintaining accurate data for <b>efficient operations</b> and <b>international consistency</b>.</p>
                         <button type="button" onclick="closePopup('popup6')">Close</button>
                     </div>
 
@@ -59,27 +63,6 @@
                         <button type="button" onclick="closePopup('popup1')">Close</button>
                     </div>
 
-                    <!-- Button marketing director -->
-                    <button type="button" class="btn" onclick="openPopup('popup2')">Marketing Director</button>
-                    <div class="popup" id="popup2">
-                        <h3>UNSW Data Science Society</h3>
-                        <img src="datasoc.png" class="logo">
-                        <p>Designed innovative marketing campaigns for the Data Science Society to strengthen student engagement.</p>
-                        <p>Developed a range of branded merchandise, enhancing the society’s visibility and sense of identity.</p>
-                        <p>Demonstrated strong problem-solving skills and analytical thinking in managing and interpreting large datasets to support business decisions.</p>
-                        <button type="button" onclick="closePopup('popup2')">Close</button>
-                    </div>
-
-                    <!-- Button sponsorship director -->
-                    <button type="button" class="btn" onclick="openPopup('popup3')">Sponsorship Director</button>
-                    <div class="popup" id="popup3">
-                        <h3>Nippon Student Association</h3>
-                        <img src="nsa.webp" class="logo">
-                        <p>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</p>
-                        <p>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</p>
-                        <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
-                        <button type="button" onclick="closePopup('popup3')">Close</button>
-                    </div>
                     <!-- Button 4 -->
                     <button type="button" class="btn" onclick="openPopup('popup4')">Cisco</button>
                     <div class="popup" id="popup4">
