--- a/about.html
+++ b/about.html
@@ -17,79 +17,19 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
+                <li><a href="volunterringExperience.html">Volunterring</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
+    </div>
+    <div class="main">
         <div class="leftSection"> 
             <h1 class="animation">Hello World!</h1>
-            <p class="animation">I am a passionate penultimate year student studying Bachelor of Data Science and Decision majoring in computational Data Science at UNSW.</p>
         </div>
-
-        <!-- making another division for more clarity -->
-        <div class="experiencename">
-            <ul>
-                <h1>Experiences</h1>
-                <div class="container">
-
-                <!-- button data engineering  -->
-                <button type="button" class="btn" onclick="openPopup('popup5')">Data Engineering Intern</button>
-                <div class="popup" id="popup5">
-                    <h3>Data Army</h3>
-                    <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
-                    <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
-                    <button type="button" onclick="closePopup('popup5')">Close</button>
-                </div>
-                <!-- button master data science -->
-                <button type="button" class="btn" onclick="openPopup('popup6')">Master Data Science Intern</button>
-                <div class="popup" id="popup6">
-                    <h3>Campari Group</h3>
-                    <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
-                    <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
-                    <button type="button" onclick="closePopup('popup6')">Close</button>
-                </div>
-
-
-                <!-- button accounting assistant -->
-                <button type="button" class="btn" onclick="openPopup('popup1')">Accounting Assistant</button>
-                <div class="popup" id="popup1">
-                    <h3>Parras and Associates</h3>
-                    <p>Data Integration and Automation: Implemented automated solutions for data entry and integration, enhancing productivity and accuracy in client data handling.</p>
-                    <p>Proficient in Data Analysis and Management: Leveraged financial software such as MYOB and advanced functionalities of Microsoft Excel for efficient client data management, data analysis, and reporting.</p>
-                    <button type="button" onclick="closePopup('popup1')">Close</button>
-                </div>
-
-                <!-- Button marketing director -->
-                <button type="button" class="btn" onclick="openPopup('popup2')">Marketing Director</button>
-                <div class="popup" id="popup2">
-                    <h3>UNSW Data Science Society</h3>
-                    <p>Designed innovative marketing campaigns for the Data Science Society to strengthen student engagement.</p>
-                    <p>Developed a range of branded merchandise, enhancing the society’s visibility and sense of identity.</p>
-                    <p>Demonstrated strong problem-solving skills and analytical thinking in managing and interpreting large datasets to support business decisions.</p>
-                    <button type="button" onclick="closePopup('popup2')">Close</button>
-                </div>
-
-                <!-- Button sponsorship director -->
-                <button type="button" class="btn" onclick="openPopup('popup3')">Sponsorship Director</button>
-                <div class="popup" id="popup3">
-                    <h3>Nippon Student Association</h3>
-                    <p>Analysed sponsorship data to identify trends and opportunities, producing comprehensive reports for stakeholders to support decision-making processes.</p>
-                    <p>Leveraged data insights to craft persuasive proposals and negotiate sponsorship deals, resulting in successful partnerships with key industry players.</p>
-                    <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
-                    <button type="button" onclick="closePopup('popup3')">Close</button>
-                </div>
-                <!-- Button 4 -->
-                <button type="button" class="btn" onclick="openPopup('popup4')">Cisco</button>
-                <div class="popup" id="popup4">
-                    <h3>Job Shadowing</h3>
-                    <p>Contributed analytical insights to discussions, influencing data-centric decision-making in marketing.</p>
-                    <p>Collaborated on the analysis of market trends and consumer behaviours.</p>
-                    <button type="button" onclick="closePopup('popup4')">Close</button>
-                </div>
-
-                
-            </ul>
+        <div class="rightSection">
+            <p class="animation">I am a passionate student studying Bachelor of Data Science and Decision majoring in computational Data Science at UNSW.</p>
         </div>
-        <img src="panda.png" class="featuring-img animation">
+        <!-- <img src="panda.png" class="featuring-img animation"> -->
     </div>
     <div class="footer">
         <p>&copy;Alina Cui 2024. All rights reserved.</p>
