--- a/games.html
+++ b/games.html
@@ -16,8 +16,10 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="experience.html">Experience</a></li>                
+                <li><a href="volunterringExperience.html">Volunterring</a></li>
                 <li><a href="project.html">Projects</a></li>
-                <li><a href="experience.html">Experience</a></li>
+
             </ul>
         </nav>
         <div class="title">
