--- a/experience.html
+++ b/experience.html
@@ -25,6 +25,7 @@
         </nav>
         <div class="content">
             <h1 class="animation">Experiences</h1>
+            <p class="animation">Below are some past relevent experiences which I had</p>
         </div>
         <div class="experiencename">
             <ul>
