--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
 
-        <div class="title">
+        <div class="content">
             <h1 class="animation">Projects</h1>
             <p class="animation">Below are some Projects which I have been working on.</p>
         </div>
@@ -30,6 +30,7 @@
                 <div class="button-grid">
                     <button type="button" class="btn" onclick="openPopup('popup1')">IBM Machine Learning Projects</button>
                     <div class="popup" id="popup1">
+                        <h3>IBM Machine Learning Projects</h3>
                         <p>In this project, I am part of a team of 4-5 students, where we analyse datasets and solve real-world problems. Working closely with IBM, we utilised a comprehensive suite of tools to deliver innovative solutions to their challenge. Through this project, I am gaining hands-on experience and developing new skills in various aspects of machine learning, including:</p>
                         <ul class="no-bullets">
                             <li><strong>Data Processing:</strong> Using Python and Pandas we performed cleaning, transforming, and preparing data for analysis.</li>
@@ -54,6 +55,7 @@
             
                     <button type="button" class="btn" onclick="openPopup('popup5')">Personal Fitness Dashboard Project</button>
                     <div class="popup" id="popup5">
+                        <h3>Personal Fitness Dashboard Project</h3>
                         <p>For this project I built an interactive Power BI dashboard to track and analyze personal fitness data from a health app, showcasing metrics like steps, calories, and distance for actionable insights.</p>
                         <ul class="no-bullets">
                             <li>Designed and developed a fitness dashboard in Power BI to track personal health metrics, including steps, calories, distance, and active vs. resting periods.</li>
@@ -80,6 +82,7 @@
                     <!-- Resume Website Project -->
                     <button type="button" class="btn" onclick="openPopup('popup2')">My Resume Website</button>
                     <div class="popup" id="popup2">
+                        <h3>My Resume Website</h3>
                         <p>As part of my front-end development projects, I created my personal resume website using HTML, CSS and JavaScript. This project involved:</p>
                         <ul class="no-bullets">
                             <li>Designing and implementing a user-friendly interface to showcase my skills, experiences, and projects.</li>
@@ -98,6 +101,7 @@
                     <!--Python and SQL Pokemon Managing System  -->
                     <button type="button" class="btn" onclick="openPopup('popup3')">SQL & Python Pokemon Managing System</button>
                     <div class="popup" id="popup3">
+                        <h3>SQL & Python Pokemon Managing System</h3>
                         <p>In this project, I've crafted Python scripts that function like a personalized Pokédex, allowing me to extract and display detailed information from a comprehensive Pokémon database. Each script represents a step closer to Python mastery, enabling precise manipulation and presentation of data as seamlessly as a professional Trainer.</p>
                         <ul class="no-bullets">
                             <li><strong>Python Scripts:</strong> Developed scripts to extract and display detailed Pokémon information.</li>
@@ -113,6 +117,7 @@
                     <!-- Huffman Tree Encoder -->
                     <button type="button" class="btn" onclick="openPopup('popup4')">Huffman Tree Encoder in C</button>
                     <div class="popup" id="popup4">
+                        <h3>Huffman Tree Encoder in C</h3>
                         <p>In this project, I've created a Huffman Tree Encoder using Binary trees in C languages: </p>
                         <ul class="no-bullets">
                             <li><strong>Binary Search Tree (BST):</strong> Implemented to maintain sorted data, allowing efficient data retrieval and manipulation.</li>
