--- a/volunterringExperience.html
+++ b/volunterringExperience.html
@@ -58,12 +58,12 @@
                 <button type="button" class="btn" onclick="openPopup('popup2')">UNSW Women In Technology</button>
                 <div class="popup" id="popup2">
                     <h3>UNSW Women In Technology</h3>
-                    <img src="datasoc.png" class="logo">
+                    <img src="WIT.png" class="logo">
                     <div class="timeline">
                         <div class="timeline-item">
                             <h4>Careers Subcommittee Member - 2023</h4>
-                            <p>BLOB</p>
-                            <p>BLOB</p>
+                            <p>Contributed to the Careers Subcommittee by planning and organizing career-focused events, connecting students with industry professionals and employers.</p>
+                            <p>Collaborated with sponsorship representatives to secure partnerships, creating valuable opportunities for both sponsors and students, and strengthening the relationship between the society, sponsors, and the broader student community.</p>
                         </div>
                     </div>
                     <button type="button" onclick="closePopup('popup2')">Close</button>
@@ -82,9 +82,9 @@
                             <p>Developed and executed sponsorship strategies based on data analysis, leading to a 50% increase in sponsor engagement and contributions.</p> 
                         </div>
                         <div class="timeline-item">
-                            <h4>Communication Subcommittee Member - 2024</h4>
-                            <p>BLOB</p>
-                            <p>BLOB</p>
+                            <h4>Communications Subcommittee Member - 2023</h4>
+                            <p>Played a key role in the Communications Subcommittee by enhancing the outreach of the society, building connections with other student organizations, and promoting collaborative initiatives.</p>
+                            <p>Worked on creating engaging marketing materials and content that not only attracted new members but also fostered student life within the Japanese community, strengthening the society's presence and engagement.</p>
                         </div>
                     </div>
                     <button type="button" onclick="closePopup('popup3')">Close</button>
