--- a/project.html
+++ b/project.html
@@ -52,6 +52,20 @@
                             <button type="button" onclick="closePopup('popup1')">close</button>
                         </div>
                     </div>
+                    <!-- Automated Geographic Data Extraction and Processing System -->
+                    <button type="button" class="btn" onclick="openPopup('popup6')">Automated Geographic Data Extraction and Processing System</button>
+                    <div class="popup" id="popup6">
+                        <h3>Automated Geographic Data Extraction and Processing System</h3>
+                        <p>Developed an automated solution to extract, process, and analyze geospatial data from a RESTful API and export it into a structured CSV format for further analysis. The system efficiently handles large volumes of data and automates the extraction of complex geospatial attributes like polygons and multi-polygons, making it easier for stakeholders to access actionable insights.</p>
+                        <ul class="no-bullets">
+                            <li><b>Key Features Web Scraping & API Integration </b> Utilizes APIs when available; otherwise, employs web scraping techniques to extract data. Data Format Handling – Supports multiple formats (JSON, XML, CSV, and unstructured text) and standardizes them for consistency. Error Handling & Adaptability – Manages rate limits, CAPTCHAs, and website structure changes to ensure uninterrupted extraction. Automation & Scheduling – Enables periodic data extraction to maintain up-to-date records. Data Storage & Integration – Processes and stores extracted data for further analysis and visualization.</li>
+                            <li><b>Learnings & Challenges</b> Through this project, I explored: The limitations of APIs and their alternatives. Challenges in handling unstructured data from various sources. Techniques to improve web scraping efficiency while staying compliant with data access policies. Future Enhancements Expanding extraction to additional regions. Implementing data validation and quality checks. Optimizing performance and error recovery mechanisms.</li>
+                        </ul>
+                        <a href="https://github.com/alinam18/AutomationDataExtraction">Look at my code here</a> 
+                        <div>
+                            <button type="button" onclick="closePopup('popup6')">close</button>
+                        </div>
+                    </div>
             
                     <button type="button" class="btn" onclick="openPopup('popup5')">Personal Fitness Dashboard Project</button>
                     <div class="popup" id="popup5">
@@ -108,7 +122,6 @@
                             <li><strong>SQL Views & PLpgSQL Functions:</strong> Implemented to enhance data management and retrieval.</li>
                             <li><strong>Data Manipulation:</strong> Created robust tools to simplify complex data challenges.</li>
                         </ul>
-                        <p>This project allowed me to apply my front-end development skills in a practical context and provided a platform to present my professional profile effectively.</p>                      
                         <a href="https://github.com/alinam18/Pokemon-Database-Sort-.git" target="_blank">Please contact me to look at the codes</a>
                         <div>
                             <button type="button" onclick="closePopup('popup3')">close</button>
