--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="volunterringExperience.html">Volunterring</a></li>
+                <li><a href="volunterringExperience.html">Volunteering</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="games.html">Games</a></li>
 
