--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="experience.html">Experience</a></li>                
-                <li><a href="volunterringExperience.html">Volunterring</a></li>
+                <li><a href="volunterringExperience.html">Volunteering</a></li>
                 <li><a href="project.html">Projects</a></li>
 
             </ul>
