--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="volunterringExperience.html">Volunterring</a></li>
+                <li><a href="volunterringExperience.html">Volunteering</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
