--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="volunterringExperience.html">Volunterring</a></li>
+                <li><a href="volunterringExperience.html">Volunteering</a></li>
                 <li><a href="games.html">Games</a></li>
             </ul>
         </nav>
