--- a/volunterringExperience.html
+++ b/volunterringExperience.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="content">
-            <h1 class="animation">Extracurricular activities and volunterring</h1>
+            <h1 class="animation">Extracurricular activities and Volunteering</h1>
         </div>
         <div class="experiencename">
             <div class="container">
