--- a/project.html
+++ b/project.html
@@ -28,6 +28,8 @@
         <div class="projects">
             <div class="container">
                 <div class="button-grid">
+
+                    <!-- ADD the campari project and also the new project that i'm working on -->
                     <button type="button" class="btn" onclick="openPopup('popup1')">IBM Machine Learning Projects</button>
                     <div class="popup" id="popup1">
                         <h3>IBM Machine Learning Projects</h3>
